# perflens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  build_package.sh  install-agent.sh  package-lock.json  package.json  pyproject.toml  run_agent.sh  run_server.sh
.github/workflows/: build.yml  test.yml
agent/: perflens_agent.py
agent-c/: Makefile  perflens_agent.c
agent-c/src/: agent.h  collect.c  commands.c  main.c  metrics.c  probe.c  procs.c  subproc.c  update.c  util.c  wire.c
docs/: architecture.html  index.html  reference.html
docs/assets/: docs.js  styles.css
frontend/: index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: start-server.mjs  ui.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  sse.ts  types.gen.ts
frontend/src/components/: BrowseModal.tsx  ControlBar.tsx  DocsDrawer.tsx  FlameGraph.tsx  FunctionTable.tsx  MetricsStrip.tsx  SessionsTab.tsx  ShortcutsHelp.tsx  SourceView.tsx  StatBar.tsx  ThreadsTab.tsx  docsContent.ts
frontend/src/lib/: format.test.ts  format.ts  replay.ts  shortcuts.ts
frontend/src/store/: live.ts  ui.ts  urlHash.test.ts  urlHash.ts
frontend/src/styles/: theme.css
frontend/src/views/: Landing.tsx  ProfilingView.tsx  (+1 more)
server/: parser.py  perflens_server.py  source_mapper.py  symcache.py
src/perflens/: __init__.py  agentlink.py  aggregator.py  app.py  cli.py  config.py  export.py  parser.py  provision.py  server.py  sessions.py  source_mapper.py  state.py  symcache.py  web.py
test/: Makefile  e2e_export.mjs  e2e_fg_search.mjs  e2e_flamegraph.mjs  sample_workload  test_aggregator_diff.py  test_parser_compat.py
tests/: conftest.py  e2e_ui.mjs  sample_workload.c  test_agent_protocol.py  test_aggregator.py  test_aggregator_diff.py  test_http_api.py  test_parser.py  test_provision.py  test_source_mapper.py
tests/matrixlab/: Makefile  run.sh
tools/: README.md  capture-demo-gif.js  capture-screenshots.js  encode-demo-gif.sh  export_openapi.py
ui/: app.js  index.html  style.css
(+84 files in other folders)
