[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perflens"
version = "0.6.0"
description = "Real-time remote Linux performance profiler with a live web UI (perf + flame graphs + line-level source annotation)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Harshith Sunku" }]
keywords = ["perf", "profiler", "flamegraph", "linux", "performance",
            "profiling", "embedded", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "orjson>=3.9",
    "zstandard>=0.21",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27", "build", "ruff"]

[project.scripts]
perflens = "perflens.cli:main"

[project.urls]
Homepage = "https://github.com/harshithsunku/perflens"
Documentation = "https://harshithsunku.github.io/perflens/"
Repository = "https://github.com/harshithsunku/perflens"
Issues = "https://github.com/harshithsunku/perflens/issues"
Changelog = "https://github.com/harshithsunku/perflens/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/perflens"]
# Ship the web UI inside the wheel (served via importlib.resources)
artifacts = ["src/perflens/ui/**"]

[tool.hatch.build.targets.sdist]
include = [
    "src/perflens",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]
